# cmake-exercise

./: CMakeLists.txt  Dockerfile  README.md
